kubernetes/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-demo-stable
  namespace: quarkus-demo
spec:
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: quarkus-demo
